# PAKDE-tauri

./: .gitignore  .prettierignore  .prettierrc  MILESTONES.md  PHOSPHOR_ICONS_PLAN.md  PITCHDECK.md  README.md  REVIEW-profile-select.md  REVIEW-start-onboarding-profile-loading.md  SPEC-topbar-refinement.md  eslint-local-rules.mjs  eslint.config.mjs  gamification-proposal.md  index.html  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js
.github/workflows/: release.yml
.kilo/plans/: 1783682973338-real-village-nik-members.md
docs/: ARCHITECTURE.md  INSTALLATION.md  MILESTONES.md  ONBOARDING.md  PITCHDECK.md  create-profile-redesign.md  data-insights-feature-leverage.md  gamification-proposal.md  komunitas-menu-refactor.md  multi-tenant-schema.md  plan-coop-fields.md  ranking-leaderboard-redesign.md  wilayah-integration.md  xp-wiring-plan.md
docs/legal/: ANALISIS.md
docs/plans/: hackathon-data-insights.md  level-up-popup.md
landing/app/: globals.css  layout.tsx  page.tsx
scripts/: prebuild-check.sh
src/: App.css  App.tsx  db.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: DevDocStripe.tsx
src/data/: eventTemplates.ts  leveling-data.ts  leveling.ts  news.ts  nik.test.ts  nik.ts  readiness.ts  seed-members.ts  xp-core.ts  xp.test.ts  xp.ts
src/db/: active-coop.ts  coopDb.ts  index.ts  init.ts  news.ts  registry.ts  seed-demo.ts  wilayah-init.ts  wilayahLookup.test.ts  wilayahLookup.ts
src/lib/: rag.ts  (+2 more)
(+175 files in other folders)
